--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -20,4 +20,4 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ramibenelmir/CRV_TME8:1.0.0
+          tags: ramibenelmir/prometheus_tme8:1.0.0
